--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
+    <meta name="description" content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me">
+    <meta name="keywords" content="portfolio, resume, ">
+    <meta property="og:url" content="https://tvildo2002.github.io/davaleba-12/#" />
+    <meta property="og:title" content="about me" />
+    <meta property="og:description"  content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me"/>
+    <meta property="og:image"  content="static/img/profile-img/profile-img.png"/>
 </head>
 <body>
     <header class="container">
@@ -83,7 +89,7 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <a class="site-btn" href="#">Show more...</a>
+                    <a class="site-btn" href="static/pages/recent-work.html">Show more...</a>
                 </div>
             </div>
             <div class="experience" id="experience">
