--- a/static/pages/recent-work.html
+++ b/static/pages/recent-work.html
@@ -7,21 +7,21 @@
     <title>My  recent work</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me">
+    <meta name="keywords" content="portfolio, resume, ">
+    <meta property="og:url" content="https://tvildo2002.github.io/davaleba-12/#" />
+    <meta property="og:title" content="about me" />
+    <meta property="og:description"  content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me"/>
+    <meta property="og:image"  content="static/img/profile-img/profile-img.png"/>
 </head>
 <body>
     <header class="container">
         <div class="logo">
             <img src="../img/site logo/logo (4).png" alt="Logo">
         </div>
-        <nav id="nav">
-            <ul>
-                <li><a href="#about-me">01. About</a></li>
-                <li><a href="#work">02. Work</a></li>
-                <li><a href="#experience">03. Experience</a></li>
-                <li><a href="#contact">04. Contact</a></li>
-                <li><a href="#">RESUME</a></li>
-            </ul>
-        </nav>
+        <a href="../../index.html">Back To Main Page</a>
+        <a href="#">RESUME</a>
+
     </header>
     <main>
         <h2 class="site-title text-center">My recent work</h2>
