--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://tvildo2002.github.io/davaleba-12/#" />
     <meta property="og:title" content="about me" />
     <meta property="og:description"  content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me"/>
-    <meta property="og:image"  content="static/img/profile-img/profile-img.png"/>
+    <meta property="og:image"  content="static/img/profile-img/stefan-stefancik-QXevDflbl8A-unsplash 1.png"/>
 </head>
 <body>
     <header class="container">
