--- a/static/pages/recent-work.html
+++ b/static/pages/recent-work.html
@@ -10,9 +10,9 @@
     <meta name="description" content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me">
     <meta name="keywords" content="portfolio, resume, ">
     <meta property="og:url" content="https://tvildo2002.github.io/davaleba-12/#" />
-    <meta property="og:title" content="about me" />
+    <meta property="og:title" content="recent projects" />
     <meta property="og:description"  content="come and see about me, my work and my experience, contact me if you are interested in collaborating with me"/>
-    <meta property="og:image"  content="static/img/profile-img/profile-img.png"/>
+    <meta property="og:image"  content="../img/profile-img/stefan-stefancik-QXevDflbl8A-unsplash 1.png"/>
 </head>
 <body>
     <header class="container">
